fix z-index

--- a/src/css/less/component/loading.less
+++ b/src/css/less/component/loading.less
@@ -9,7 +9,7 @@
     padding-top: 40px;
     padding-bottom: 40px;
     background-color:rgba(255, 255, 255, 0.5);;
-    zIndex:1000;
+    z-index:1000;
     position: absolute;
     bottom: 0;
     left: 0;
